--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 30.08.2022 08:07:36</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 30.08.2022 09:04:15</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,42 @@
 <h5>Úterý, 30. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Tomatová</strong>
+<strong>Krémová rybí</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřový guláš s rýží NEBO těstovinou</strong>
+<strong>Uzená krkovička s křenovou omáčkou a houskovým knedlíkem NEBO bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							145,-
 						</span>
 </p>
 <p>
-<strong>Špagety se žampionovo - slaninovou omáčkou a sýrem</strong>
+<strong>Srbské vepřové rizoto se sýrem a okurkou NEBO řepou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							143,-
+						</span>
+</p>
+<p>
+<strong>Míchaný salát s grilovanými kuřecími křidélky.</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							141,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: zelenina, ryze, grilované kuřecí špalíky, pečený brambor, Tilapie s balsamico cibulkou</strong>
+<strong>TEPLÝ BUFET: Smetanové brambory, zelenina, rýže, Tilapie se sušenými rajčaty, kuřecí prsa na žlutém kari</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: ledový salát s červenou řepou a chilli dresinkem, kuskus se sušenými rajčaty, ledový salát</strong>
+<strong>SALÁTY: kuskus se sušenými rajčaty, ledový s červenou řepou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -52,7 +59,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 30.8.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Míša dort</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie  (bez lepku) </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kuřecí polévka Tom Kha Gai, zelenina, rýžové nudle, koriandr v menu <em title="Ryby">4</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kuřecí polévka Tom Kha Gai, zelenina, rýžové nudle, koriandr samostatně <em title="Ryby">4</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Masové koule v marinara omáčce, těstoviny penne, bazalka, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>250g Pečené kuřecí stehno na másle, glazovaná karotka, hrášek, jasmínová rýže, pažitka</div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Květákové karbanátky, parmazán, petrželka, šťouchaný brambor</div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -88,7 +140,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s omackou aiolli, pecene brambory, salatek 155</li><li>Smazeny filet z cerstve tresky v tempura testicku s omackou aiolli, pecene brambory, salatek {L} 179</li><li>Indicky grilovany veprovy kebab v tanduri marinade, dynovy pilaf z kulate ryze, jogurtovy dip, salatek 155</li><li>Grilovane kruti medailonky s omackou Salsa rossa, pohanka se smazenou cibulkou, salatek 179</li><li>Zapecene cukety plnene cervenou cockou s porkem a balkanskym syrem, dynovy pilaf z kulate ryze, salatek 15</li></ol>
+<ol><li>Peceny jihocesky pstruh s ancovickovo-citronovym dresinkem, kari ze zeleneho hrachu, salatek 155</li><li>Peceny filet z cerstve prazmy kralovske s ancovickovo-citronovym dresinkem, kari ze zeleneho hrachu, salatek 179</li><li>Pikantni bengalske kruti jalfrezi s pecenymi paprikami a lzici zakysane smetany, jasminova ryze, salatek 155</li><li>Wrap s uzenymi koroptvimi prsicky, rajcetem a ledovym salatem, avokadove guacamole, pecene brambory, salatek {L} 179</li><li>Kapustove placicky s goudou, petrzelkou a spetkou muskatu, stouchane brambory s porkem, tatarska omacka {L} 155</li></ol>
 </td>
 </tr>
 </table>
