--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.09.2022 08:24:09</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.09.2022 08:55:00</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 1.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Mango cheesecake</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, červeným rybízem a drobenkou </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Gulášová polévka v menu  <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Gulášová polévka samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí stroganov, restované žampiony, tarhoňa, kyselá okurka, kerblík <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Butter chicken ve smetanové omáčce s rajčaty, jasmínová rýže, koriandr, sezam, limetkový jogurt <em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Salát z čočky beluga, kořenová zelenina, zastřené vejce, červená řepa s koprem a česnekem <em title="Vejce">3</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
