--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.09.2022 08:55:00</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.09.2022 09:15:10</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,17 +7,17 @@
 <h5>Čtvrtek, 01. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Bramborová se zázvorem</strong>
+<strong>Kari se zeleninou a hovězím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřová kotleta s kroketami a BBQ omáčku</strong>
+<strong>Smažený hermelín s vařeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							145,-
+							147,-
 						</span>
 </p>
 <p>
@@ -128,7 +128,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a bazalkovym olivovym olejem, zeleninove birjany z basmati ryze, salatek 155</li><li>Spagety s uzenym lososem, pecenymi rajcaty, bazalkou a pesto rosso {L} 179</li><li>Malajsky hovezi rendang s kokosovym mlekem, citronovou travou a vonavym korenim, jasminova ryze, salatek 155</li><li>Grilovane danci kofte, zeleninove birjany z basmati ryze, jogurtovy dip, salatek 175</li><li>Indicke kvetakove kari se zelenym hrachem, rajcaty, jogurtem a sazenym vejcem, jasminova ryze 155</li></ol>
+<ol><li>Grilovane biftecky z rybich filetu s petrzelkou {hejk, treska, sled}, koprovo-citronova jogurtova omacka, stouchane brambory s porkem, salatek z cervene repy 155</li><li>Peceny filet z cerstveho norskeho lososa s koprovo-citronovou jogurtovou omackou, stouchane brambory s porekm, salatek z cervene repy 179</li><li>Lasagne s hovezim a krutim masem, rajcaty, bazalkou a pecenymi paprikami zapecene ve smetanove omacce, salatek {L} 155</li><li>Pecene kachni stehno na pomerancich a zazvoru, pecena chilli dyne, salatek 175</li><li>Wrap s pecenou cervenou repou a gorgonzollou, avokadove guacamole, korenena ryze, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
