--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.09.2022 09:15:10</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.09.2022 09:39:25</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -21,21 +21,28 @@
 						</span>
 </p>
 <p>
-<strong>Toskánské hovězí kostky s rýži</strong>
+<strong>Vepřová plec na cesneku a cibulce s těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							147,-
+							145,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: smetanové brambory, Tilapie s cibulkou a houbami, zelenina, rýže, pečené vepřové koleno</strong>
+<strong>Staročeské zadělávané Dršťková s pečeným bramborem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							141,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: toskánská kuřecí prsa, Tilapie s rajčaty, zelenina, rýže, pečený brambor,</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: zeleninový s hořčičným dresinkem, salát z červené řepy s Kozím sýrem</strong>
+<strong>SALÁTY: červená řepa s kozím sýrem, míchaná zelenina</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
