--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.09.2022 08:42:24</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.09.2022 09:26:41</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,42 @@
 <h5>Čtvrtek, 08. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Polévka ze žluté čočky s kuřecím masem</strong>
+<strong>Zeleninová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>1/2 pečeného kuřátka s pečeným bramborem a baby mrkvičkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							149,-
-						</span>
-</p>
-<p>
-<strong>Hrachová kaše s klobásou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							141,-
-						</span>
-</p>
-<p>
-<strong>Okouník nilský s červenou čočkou</strong>
+<strong>Smažený Vepřový řízek se šťouchaným bramborem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							147,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: mrkev, zelenina, rýže, vepřové koleno</strong>
+<strong>Zapečená brokolice s restovanou slaninou a pečeným bramborem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							141,-
+						</span>
+</p>
+<p>
+<strong>Ledový salát s rajčaty, uzeným masem a bramborami</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							147,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: Tilapie s uzeným a žampiony, vepřové lilinko, ryze, baby mrkev, Smetanové brambory</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: okurkový s česnekovým jogurtem, fazolový se zeleninou a chilli dresinkem</strong>
+<strong>SALÁTY: rajčatový, okurkový s česnekem, fazolový se zeleninou a chilli</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -85,7 +85,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Halušky s uzeným masem, kysané zelí, smažená cibulka <em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="polozka"><span class="poradi">2. </span>150g Halušky s uzeným masem, kysané zelí, smažená cibulka <em title="Obiloviny obsahující lepek">1</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
 <div class="cena">159 Kč</div>
 <div class="clear"></div>
 </li>
