--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.09.2022 09:04:47</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.09.2022 09:43:49</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,35 @@
 <h5>Pátek, 09. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Zeleninová</strong>
+<strong>Polévka ze zeleného kari</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený Vepřový řízek se šťouchaným bramborem a okurkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							147,-
-						</span>
-</p>
-<p>
-<strong>Zapečená brokolice s restovanou slaninou a pečeným bramborem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							141,-
-						</span>
-</p>
-<p>
-<strong>Ledový salát s rajčaty, uzeným masem a bramborami</strong>
+<strong>Vepřová plec se žampionovou omáčkou a rýží NEBO těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							145,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Tilapie s uzeným a žampiony, vepřové lilinko, ryze, baby mrkev, Smetanové brambory</strong>
+<strong>Míchaný salát s kuřecím masem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							143,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: barbecue kuřecí stehynka, ryze, Okouník se slaninou a žampiony, pečeně brambory, zelenina</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: rajčatový, okurkový s česnekem, fazolový se zeleninou a chilli</strong>
+<strong>SALÁTY: rajčatový s paprikovým dresinkem, okurkový</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
